--- a/style.css
+++ b/style.css
@@ -37,5 +37,25 @@ iframe{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); /** SEMPRE que eu quiser deixar no meio usando o POSITION, usar 50% 50% e -50% -50%! */
+}
+
+section#redes-sociais{
+    display: grid;
+    justify-content: right;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.712);
+    transform: translate(-03px, -03px);
+    box-shadow: 05px 05px 05px rgba(0, 0, 0, 0.486);
+    transition: transform 0.3s, border 0.4s; /** Aqui são os "efeitos" que eu posso fazer ao passar o mouse em cima. */
+
+}
+
+section a > img{
+    height: 70px;
+    margin: 10px;
+    border-radius: 50%; /** É ao deixar o BORDER RADIUS em 50% que faz com que a imagem fique redonda!!*/
+    box-shadow: 01px 01px 01px rgba(0, 0, 0, 0.527);
 }
